--- a/package.json
+++ b/package.json
@@ -14,9 +14,21 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^4.20.0",
+    "gatsby-plugin-image": "^2.21.0",
+    "gatsby-plugin-sharp": "^4.21.0",
+    "gatsby-plugin-styled-components": "^5.20.0",
+    "gatsby-source-contentful": "^7.19.0",
+    "gatsby-source-filesystem": "^4.21.0",
+    "gatsby-source-graphql": "^4.21.0",
+    "gatsby-transformer-sharp": "^4.21.0",
+    "normalize.css": "^8.0.1",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
+    "slugify": "^1.6.5",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "prettier": "^2.7.1"
