--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^4.20.0",
     "gatsby-plugin-image": "^2.21.0",
+    "gatsby-plugin-react-helmet": "^5.21.0",
     "gatsby-plugin-sharp": "^4.21.0",
     "gatsby-plugin-styled-components": "^5.20.0",
+    "gatsby-plugin-webfonts": "^2.2.2",
     "gatsby-source-contentful": "^7.19.0",
     "gatsby-source-filesystem": "^4.21.0",
     "gatsby-source-graphql": "^4.21.0",
@@ -26,6 +28,7 @@
     "normalize.css": "^8.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
     "slugify": "^1.6.5",
     "styled-components": "^5.3.5"
